--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght,SOFT,WONK@0,9..144,100..900,50,1;1,9..144,100..900,50,1&family=Manrope:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght,SOFT,WONK@0,9..144,100..900,0..100,0..1;1,9..144,100..900,0..100,0..1&family=Manrope:wght@200..800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .curved {
+    @apply after:content-[''] after:absolute after:left-0 after:right-0 after:bottom-[-15px] after:bg-inherit after:h-[35px] after:rounded-[50%];
+  }
+}
