--- a/src/output.css
+++ b/src/output.css
@@ -569,6 +569,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.invisible{
+  visibility: hidden;
+}
+
 .absolute{
   position: absolute;
 }
@@ -577,72 +581,65 @@ video {
   position: relative;
 }
 
+.-bottom-\[105px\]{
+  bottom: -105px;
+}
+
+.-left-\[225px\]{
+  left: -225px;
+}
+
+.-right-\[95px\]{
+  right: -95px;
+}
+
 .left-1\/2{
   left: 50%;
 }
 
-.top-\[-500px\]{
-  top: -500px;
+.right-0{
+  right: 0px;
+}
+
+.top-1\/2{
+  top: 50%;
+}
+
+.top-\[100px\]{
+  top: 100px;
 }
 
 .top-\[410px\]{
   top: 410px;
 }
 
-.top-\[-50\%\]{
-  top: -50%;
+.-top-\[100px\]{
+  top: -100px;
 }
 
-.-bottom-3{
-  bottom: -0.75rem;
-}
-
-.-bottom-5{
-  bottom: -1.25rem;
-}
-
-.-bottom-\[-50px\]{
-  bottom: 50px;
-}
-
-.-bottom-\[50px\]{
-  bottom: -50px;
-}
-
-.bottom-\[-50px\]{
-  bottom: -50px;
-}
-
-.-top-\[50px\]{
-  top: -50px;
-}
-
-.-bottom-\[55px\]{
-  bottom: -55px;
-}
-
-.-z-10{
-  z-index: -10;
-}
-
-.z-0{
-  z-index: 0;
-}
-
-.z-20{
-  z-index: 20;
-}
-
-.z-\[1\]{
-  z-index: 1;
+.-top-\[235px\]{
+  top: -235px;
 }
 
 .z-10{
   z-index: 10;
 }
 
-.z-\[-1\]{
-  z-index: -1;
+.z-20{
+  z-index: 20;
+}
+
+.z-0{
+  z-index: 0;
+}
+
+.-z-10{
+  z-index: -10;
+}
+
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-10{
@@ -657,12 +654,52 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
 .mb-\[74px\]{
   margin-bottom: 74px;
 }
 
-.-mt-8{
-  margin-top: -2rem;
+.ml-auto{
+  margin-left: auto;
+}
+
+.mb-8{
+  margin-bottom: 2rem;
+}
+
+.ml-10{
+  margin-left: 2.5rem;
+}
+
+.ml-1{
+  margin-left: 0.25rem;
+}
+
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.ml-14{
+  margin-left: 3.5rem;
+}
+
+.ml-40{
+  margin-left: 10rem;
+}
+
+.ml-52{
+  margin-left: 13rem;
+}
+
+.ml-60{
+  margin-left: 15rem;
+}
+
+.ml-56{
+  margin-left: 14rem;
 }
 
 .inline-block{
@@ -677,13 +714,14 @@ video {
   display: none;
 }
 
+.size-12{
+  width: 3rem;
+  height: 3rem;
+}
+
 .size-\[281px\]{
   width: 281px;
   height: 281px;
-}
-
-.h-\[46px\]{
-  height: 46px;
 }
 
 .max-h-\[730px\]{
@@ -694,24 +732,29 @@ video {
   min-height: 481.707px;
 }
 
-.w-12{
-  width: 3rem;
+.w-full{
+  width: 100%;
+}
+
+.min-w-\[298\.305px\]{
+  min-width: 298.305px;
 }
 
 .min-w-\[343px\]{
   min-width: 343px;
 }
 
-.max-w-\[298\.305px\]{
-  max-width: 298.305px;
-}
-
-.max-w-\[730px\]{
-  max-width: 730px;
+.flex-1{
+  flex: 1 1 0%;
 }
 
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -721,6 +764,10 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-end{
+  justify-content: flex-end;
 }
 
 .justify-center{
@@ -735,6 +782,10 @@ video {
   gap: 2.5rem;
 }
 
+.gap-16{
+  gap: 4rem;
+}
+
 .gap-4{
   gap: 1rem;
 }
@@ -747,20 +798,12 @@ video {
   gap: 1.75rem;
 }
 
-.gap-\[70px\]{
-  gap: 70px;
+.self-end{
+  align-self: flex-end;
 }
 
-.gap-16{
-  gap: 4rem;
-}
-
-.overflow-hidden{
-  overflow: hidden;
-}
-
-.rounded-\[30\.5px\]{
-  border-radius: 30.5px;
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .border-2{
@@ -805,6 +848,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.p-4{
+  padding: 1rem;
+}
+
 .p-8{
   padding: 2rem;
 }
@@ -824,12 +871,12 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pb-7{
-  padding-bottom: 1.75rem;
+.pb-16{
+  padding-bottom: 4rem;
 }
 
-.pb-\[110px\]{
-  padding-bottom: 110px;
+.pb-\[1px\]{
+  padding-bottom: 1px;
 }
 
 .pb-\[72px\]{
@@ -840,20 +887,12 @@ video {
   padding-top: 10rem;
 }
 
-.pt-9{
-  padding-top: 2.25rem;
+.pt-8{
+  padding-top: 2rem;
 }
 
-.pt-\[330px\]{
-  padding-top: 330px;
-}
-
-.pt-\[100px\]{
-  padding-top: 100px;
-}
-
-.pb-16{
-  padding-bottom: 4rem;
+.pt-\[328px\]{
+  padding-top: 328px;
 }
 
 .text-center{
@@ -885,8 +924,8 @@ video {
   line-height: 1.5rem;
 }
 
-.text-xl{
-  font-size: 1.25rem;
+.text-lg{
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -937,6 +976,38 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.mix-blend-normal{
+  mix-blend-mode: normal;
+}
+
+.mix-blend-multiply{
+  mix-blend-mode: multiply;
+}
+
+.mix-blend-screen{
+  mix-blend-mode: screen;
+}
+
+.mix-blend-overlay{
+  mix-blend-mode: overlay;
+}
+
+.mix-blend-darken{
+  mix-blend-mode: darken;
+}
+
+.mix-blend-color-dodge{
+  mix-blend-mode: color-dodge;
+}
+
+.mix-blend-difference{
+  mix-blend-mode: difference;
+}
+
+.mix-blend-exclusion{
+  mix-blend-mode: exclusion;
+}
+
 .transition-all{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -957,4 +1028,356 @@ video {
 .hover\:text-eucaplyptus:hover{
   --tw-text-opacity: 1;
   color: rgb(68 255 161 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px){
+  .md\:visible{
+    visibility: visible;
+  }
+
+  .md\:left-\[40px\]{
+    left: 40px;
+  }
+
+  .md\:top-\[430px\]{
+    top: 430px;
+  }
+
+  .md\:left-0{
+    left: 0px;
+  }
+
+  .md\:-top-\[200px\]{
+    top: -200px;
+  }
+
+  .md\:-top-\[180px\]{
+    top: -180px;
+  }
+
+  .md\:-left-\[180px\]{
+    left: -180px;
+  }
+
+  .md\:-top-\[150px\]{
+    top: -150px;
+  }
+
+  .md\:-left-\[190px\]{
+    left: -190px;
+  }
+
+  .md\:-left-\[170px\]{
+    left: -170px;
+  }
+
+  .md\:-left-\[175px\]{
+    left: -175px;
+  }
+
+  .md\:mb-14{
+    margin-bottom: 3.5rem;
+  }
+
+  .md\:mb-20{
+    margin-bottom: 5rem;
+  }
+
+  .md\:mb-6{
+    margin-bottom: 1.5rem;
+  }
+
+  .md\:min-h-\[540\.236px\]{
+    min-height: 540.236px;
+  }
+
+  .md\:max-w-\[470\.441px\]{
+    max-width: 470.441px;
+  }
+
+  .md\:max-w-\[514px\]{
+    max-width: 514px;
+  }
+
+  .md\:max-w-\[573px\]{
+    max-width: 573px;
+  }
+
+  .md\:-translate-x-0{
+    --tw-translate-x: -0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:items-start{
+    align-items: flex-start;
+  }
+
+  .md\:gap-8{
+    gap: 2rem;
+  }
+
+  .md\:p-14{
+    padding: 3.5rem;
+  }
+
+  .md\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .md\:px-\[100px\]{
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  .md\:pb-\[100px\]{
+    padding-bottom: 100px;
+  }
+
+  .md\:pt-48{
+    padding-top: 12rem;
+  }
+
+  .md\:pt-\[251px\]{
+    padding-top: 251px;
+  }
+
+  .md\:text-left{
+    text-align: left;
+  }
+
+  .md\:text-\[48px\]{
+    font-size: 48px;
+  }
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .md\:leading-\[56px\]{
+    line-height: 56px;
+  }
+
+  .md\:leading-\[60px\]{
+    line-height: 60px;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:-bottom-\[60px\]{
+    bottom: -60px;
+  }
+
+  .lg\:right-\[60px\]{
+    right: 60px;
+  }
+
+  .lg\:top-\[530px\]{
+    top: 530px;
+  }
+
+  .lg\:-left-\[145px\]{
+    left: -145px;
+  }
+
+  .lg\:-right-\[45px\]{
+    right: -45px;
+  }
+
+  .lg\:left-\[170px\]{
+    left: 170px;
+  }
+
+  .lg\:-left-\[275px\]{
+    left: -275px;
+  }
+
+  .lg\:-left-\[375px\]{
+    left: -375px;
+  }
+
+  .lg\:-top-\[180px\]{
+    top: -180px;
+  }
+
+  .lg\:-left-\[380px\]{
+    left: -380px;
+  }
+
+  .lg\:-left-\[385px\]{
+    left: -385px;
+  }
+
+  .lg\:mb-32{
+    margin-bottom: 8rem;
+  }
+
+  .lg\:mb-8{
+    margin-bottom: 2rem;
+  }
+
+  .lg\:mb-9{
+    margin-bottom: 2.25rem;
+  }
+
+  .lg\:mb-\[50px\]{
+    margin-bottom: 50px;
+  }
+
+  .lg\:ml-20{
+    margin-left: 5rem;
+  }
+
+  .lg\:ml-auto{
+    margin-left: auto;
+  }
+
+  .lg\:ml-36{
+    margin-left: 9rem;
+  }
+
+  .lg\:ml-56{
+    margin-left: 14rem;
+  }
+
+  .lg\:ml-96{
+    margin-left: 24rem;
+  }
+
+  .lg\:size-\[477px\]{
+    width: 477px;
+    height: 477px;
+  }
+
+  .lg\:size-14{
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+
+  .lg\:min-h-\[730px\]{
+    min-height: 730px;
+  }
+
+  .lg\:max-w-\[635px\]{
+    max-width: 635px;
+  }
+
+  .lg\:max-w-\[730px\]{
+    max-width: 730px;
+  }
+
+  .lg\:max-w-\[702px\]{
+    max-width: 702px;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+  .lg\:flex-col{
+    flex-direction: column;
+  }
+
+  .lg\:items-center{
+    align-items: center;
+  }
+
+  .lg\:gap-14{
+    gap: 3.5rem;
+  }
+
+  .lg\:gap-7{
+    gap: 1.75rem;
+  }
+
+  .lg\:p-16{
+    padding: 4rem;
+  }
+
+  .lg\:px-40{
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+  .lg\:px-36{
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .lg\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .lg\:px-28{
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
+  .lg\:pt-14{
+    padding-top: 3.5rem;
+  }
+
+  .lg\:pt-\[283px\]{
+    padding-top: 283px;
+  }
+
+  .lg\:pt-\[255px\]{
+    padding-top: 255px;
+  }
+
+  .lg\:text-center{
+    text-align: center;
+  }
+
+  .lg\:text-\[18px\]{
+    font-size: 18px;
+  }
+
+  .lg\:text-\[56px\]{
+    font-size: 56px;
+  }
+
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-\[80px\]{
+    font-size: 80px;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-\[32px\]{
+    font-size: 32px;
+  }
+
+  .lg\:leading-8{
+    line-height: 2rem;
+  }
+
+  .lg\:leading-\[64px\]{
+    line-height: 64px;
+  }
+
+  .lg\:leading-\[80px\]{
+    line-height: 80px;
+  }
+
+  .lg\:leading-10{
+    line-height: 2.5rem;
+  }
+
+  .lg\:tracking-\[-0\.18px\]{
+    letter-spacing: -0.18px;
+  }
 }
